ADDED: pushbullet GUI

--- a/ui/sections/system/inspectors/alert.reel/mail.reel/mail.html
+++ b/ui/sections/system/inspectors/alert.reel/mail.reel/mail.html
@@ -139,7 +139,7 @@
             "prototype": "blue-shark/ui/field-multiple-select.reel",
             "properties": {
                 "element": {"#": "send_to"},
-                "label": "Send to",
+                "label": "Recipients List",
                 "labelPath": "this",
                 "isDraggable": true,
                 "inputTitle": "Add a recipient",
