Hide interfaces with dhcp/aliases for LAGG ports
Ticket: #18782

--- a/ui/sections/network/inspectors/network-interface.reel/network-interface.html
+++ b/ui/sections/network/inspectors/network-interface.reel/network-interface.html
@@ -255,7 +255,7 @@
             },
             "bindings": {
                 "object": {"<-": "@owner.object"},
-                "portOptions": {"<-": "@owner.interfaces.filter{type == 'ETHER'}"}
+                "portOptions": {"<-": "@owner.interfaces.filter{type == 'ETHER' && aliases.length == 0 && !dhcp}"}
             }
         },
         "vlan": {
