show boot pool topology table

--- a/ui/sections/system/inspectors/boot-pool.reel/boot-pool.html
+++ b/ui/sections/system/inspectors/boot-pool.reel/boot-pool.html
@@ -106,7 +106,6 @@
             "prototype": "./boot-pool-topology-table.reel",
             "properties": {
                 "element": {"#": "bootPoolTopologyTable"},
-                "label": "Boot Pool Topology",
                 "contentMaxHeight": 8,
                 "delegate": {"@": "owner"}
             },
@@ -166,7 +165,7 @@
             <div data-montage-id="bootVolumeCondition"></div>
             <div data-montage-id="activeEnvironmentTable" class="BootPool-table BootPool-activeEnvironmentTable"></div>
             <div data-montage-id="inactiveEnvironmentTable" class="BootPool-table"></div>
-            <div data-montage-id="bootVolumeTopologySection" class="hide">
+            <div data-montage-id="bootVolumeTopologySection">
                 <div data-montage-id="bootPoolTopologyTable" class="BootPool-table"></div>
             </div>
             <div data-arg="footer-additional-button" class="ActionButtons">
