hides footer on section root

--- a/ui/controls/section-root.reel/section-root.html
+++ b/ui/controls/section-root.reel/section-root.html
@@ -72,7 +72,8 @@
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
-                "element": {"#": "inspector"}
+                "element": {"#": "inspector"},
+                "isFooterHidden": true
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
