--- a/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate.html
+++ b/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate.html
@@ -44,15 +44,6 @@
                 "confirmationMessage": {"<-": "'Are you sure you want to delete ' + @owner.object.var + '?'"}
             }
         },
-        "substitution": {
-            "prototype": "montage/ui/substitution.reel",
-            "properties": {
-                "element": {"#": "substitution"}
-            },
-            "bindings": {
-                "switchValue": {"<-": "!!@certificateActionPlaceHolder.component.object._isNew + ''"}
-            }
-        },
         "name": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
@@ -90,6 +81,9 @@
             "properties": {
                 "element": {"#": "export"},
                 "value": "Export Certificate"
+            },
+            "bindings": {
+                "classList.has('hide')": {"<-": "!!@certificateActionPlaceHolder.component.object._isNew"}
             }
         },
         "noOperation": {
@@ -105,11 +99,7 @@
 <body>
     <div data-montage-id="owner" class="CryptoCertificate">
         <div data-montage-id="inspector">
-            <div data-montage-id="substitution">
-                 <div data-arg="false">
-                    <div data-montage-id="export" id="export"></div>
-                 </div>
-            </div>
+            <div data-montage-id="export" id="export"></div>
             <div data-montage-id="noOperation" class="Updates-noOperation"></div>
             <div data-montage-id="name"></div>
             <div data-montage-id="nameDisplay"></div>
