Fix vm settings save
Ticket: #21101
Ticket: #21113
Ticket: #21131

--- a/ui/sections/peering/inspectors/peer.reel/peer.html
+++ b/ui/sections/peering/inspectors/peer.reel/peer.html
@@ -11,6 +11,9 @@
                 "inspector": {"@": "inspector"},
                 "credentials": {"@": "credentials"}
             },
+            "bindings": {
+                "isLoading": {"<-": "@credentials.isLoadingComponent"}
+            },
             "listeners": [
                 {
                     "type": "action",
