Add loading status to service state in share inspector

--- a/ui/controls/chart.reel/chart.html
+++ b/ui/controls/chart.reel/chart.html
@@ -14,7 +14,7 @@
             }
         },
         "loading": {
-            "prototype": "ui/controls/spinner.reel",
+            "prototype": "blue-shark/ui/spinner.reel",
             "properties": {
                 "element": {"#": "loading"}
             }
