--- a/ui/sections/storage/inspectors/share.reel/share.html
+++ b/ui/sections/storage/inspectors/share.reel/share.html
@@ -96,7 +96,8 @@
             },
             "bindings": {
                 "checked": {"<->": "!!@owner.serviceEnabled"},
-                "label": {"<-": "'Enable ' + @owner.object.type.toUpperCase() + ' Service'"}
+                "label": {"<-": "'Enable ' + @owner.object.type.toUpperCase() + ' Service'"},
+                "isLoading": {"<-": "@owner.isServiceLoading"}
             }
         },
         "name": {
