--- a/ui/controls/cascading-list.reel/cascading-list-item.reel/cascading-list-item.html
+++ b/ui/controls/cascading-list.reel/cascading-list-item.reel/cascading-list-item.html
@@ -24,7 +24,7 @@
         },
 
         "loading": {
-            "prototype": "ui/controls/spinner.reel",
+            "prototype": "blue-shark/ui/spinner.reel",
             "properties": {
                 "element": {"#": "loading"}
             },
