--- a/ui/controls/list.reel/list.html
+++ b/ui/controls/list.reel/list.html
@@ -10,7 +10,7 @@
             }
         },
         "loading": {
-            "prototype": "ui/controls/spinner.reel",
+            "prototype": "blue-shark/ui/spinner.reel",
             "properties": {
                 "element": {"#": "loading"}
             },
