--- a/ui/inspectors/inspector.reel/inspector.html
+++ b/ui/inspectors/inspector.reel/inspector.html
@@ -36,7 +36,7 @@
             }
         },
         "loading": {
-            "prototype": "ui/controls/spinner.reel",
+            "prototype": "blue-shark/ui/spinner.reel",
             "properties": {
                 "element": {"#": "loading"}
             }
