--- a/ui/controls/cascading-list.reel/cascading-list.html
+++ b/ui/controls/cascading-list.reel/cascading-list.html
@@ -9,7 +9,7 @@
             "properties": {
                 "element": {"#": "owner"},
                 "repetition": {"@": "repetition"},
-                "scrollView": {"@": "horizontalScroll"}
+                "scrollView": {"@": "scrollview"}
             }
         },
         "repetition": {
@@ -31,10 +31,10 @@
                 "data": {"<-": "@repetition:iteration.object"}
             }
         },
-        "horizontalScroll": {
+        "scrollview": {
             "prototype": "blue-shark/ui/scroller.reel",
             "properties": {
-                "element": {"#": "horizontalScroll"},
+                "element": {"#": "scrollview"},
                 "minHeight": true
             }
         }
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="CascadingList">
-        <div data-montage-id="horizontalScroll">
+        <div data-montage-id="scrollview" class="CascadingList-scroller">
             <div data-montage-id="repetition" class="CascadingList-repetition">
                 <div data-montage-id="item"></div>
             </div>
