scroller regression fixes on calendar

--- a/ui/inspectors/calendar.reel/calendar.html
+++ b/ui/inspectors/calendar.reel/calendar.html
@@ -46,6 +46,7 @@
         },
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
+            "properties": {
                 "element": {"#": "inspector"}
             },
             "bindings": {
