--- a/ui/inspectors/services-category.reel/services-category.html
+++ b/ui/inspectors/services-category.reel/services-category.html
@@ -40,7 +40,7 @@
 <body>
     <div data-montage-id="owner" class="ServicesCategory">
         <div data-montage-id="inspector">
-            <div data-montage-id="services" class="g-margin--subtract"></div>
+            <div data-montage-id="services" class="g-margin-top--subtract g-margin-h--subtract"></div>
         </div>
     </div>
 </body>
