--- a/ui/sections/network/inspectors/network-interface.reel/network-interface.html
+++ b/ui/sections/network/inspectors/network-interface.reel/network-interface.html
@@ -42,7 +42,7 @@
             }
         },
         "overview": {
-            "prototype": "ui/controls/interface-overview.reel",
+            "prototype": "../../controls/interface-overview.reel",
             "properties": {
                 "element": {"#": "overview"}
             },
