cleans up topology layout

--- a/ui/sections/storage/inspectors/topology.reel/topology.html
+++ b/ui/sections/storage/inspectors/topology.reel/topology.html
@@ -64,7 +64,7 @@
 <body>
     <div data-montage-id="owner" class="TopologyEdit">
         <div data-montage-id="inspector">
-            <div class="TopologyEdit-content">
+            <div class="TopologyEdit-content g-margin-h--subtract g-margin-top--subtract">
                 <div data-montage-id="topology"></div>
             </div>
         </div>
