Hide Kerberos keytabs entry

--- a/ui/sections/accounts/inspectors/directory-services.reel/directory-service.reel/directory-service.html
+++ b/ui/sections/accounts/inspectors/directory-services.reel/directory-service.reel/directory-service.html
@@ -41,7 +41,8 @@
                 "controller":   {"@": "owner"}
             },
             "bindings": {
-                "context": {"<-": "@owner.context"}
+                "context": {"<-": "@owner.context"},
+                "isLoading": {"<-": "@content.isLoadingComponent"}
             }
         },
 
