cleans up layout on volume-creator

--- a/ui/sections/storage/inspectors/volume-creator.reel/volume-creator.html
+++ b/ui/sections/storage/inspectors/volume-creator.reel/volume-creator.html
@@ -136,8 +136,8 @@
 <body>
     <div data-montage-id="owner" class="VolumeCreator">
         <div data-montage-id="inspector">
-            <div class="VolumeCreator-content">
-                <div class="g-margin-h g-padding-top">
+            <div class="VolumeCreator-content g-margin-h--subtract flush-top">
+                <div class="g-margin-h">
                     <div data-montage-id="name"></div>
                     <div data-montage-id="encryptionSettings">
                         <div data-montage-id="key_encrypted"></div>
