Rename superuser to Administrator and make the property add/remove the user from the wheel group
Ticket: #20664

--- a/ui/sections/accounts/inspectors/user.reel/user.html
+++ b/ui/sections/accounts/inspectors/user.reel/user.html
@@ -451,7 +451,7 @@
             "properties": {
                 "element": {"#": "sudoEdit"},
                 "validationPath": "sudo",
-                "label": "Superuser"
+                "label": "Administrator"
             },
             "bindings": {
                 "checked": {"<->": "!!@owner.object.sudo"}
@@ -461,7 +461,7 @@
             "prototype": "blue-shark/ui/field-text.reel",
             "properties": {
                 "element": {"#": "sudoDisplay"},
-                "label": "Superuser"
+                "label": "Administrator"
             },
             "bindings": {
                 "value": {"<-": "!!@owner.object.sudo ? 'Yes' : 'No'"}
